--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -6,7 +6,9 @@
   <title>物流仓储大数据展示</title>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app">
+    <router-view />
+  </div>
   <script type="module" src="/src/main.js"></script>
 </body>
 </html>
